# scikit-diveMove

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.rst  bouts.html  boutsdemo.html  boutsimuldemo.html  demo_allan.html  demo_bouts.html  demo_ellipsoid.html  demo_imu2body.html  demo_simulbouts.html  demo_tdr.html  genindex.html  imutools.html  imutools_demos.html  index.html  metadata.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tdr.html  tdrdemo.html  tdrphases.html  tdrsource.html  tox.ini  zoc.html
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  submit-question.md
.github/workflows/: builds.yml  testpypi.yml
_downloads/084f2005f8cb7be501bb635e9c707646/: demo_imu2body.py
_downloads/0e7def991bc9e538fc8efda5837df4c5/: demo_ellipsoid.py
_downloads/19276d32f6e2155a991411066c6f202a/: demo_tdr.py
_downloads/6df43eb0156a4315e24cdd5e2a4c72ba/: boutsdemo.py
_downloads/6fe606eed06f1bf8dfd6732b391d309a/: demo_simulbouts.py
_downloads/93eb59dc20f816f4185e8d164a985d2d/: demo_ellipsoid.py
_downloads/c2a2ac1a7365fa3fb3046bd26fd48116/: demo_bouts.py
_downloads/ce1cd38439d10f66ffb41f79b24707ef/: demo_allan.py
_downloads/e452a3f23c3782fd4c41504412edb33c/: tdrdemo.py
_downloads/e58f05890bb8df41d93cf9537b4e74f2/: demo_simulbouts.py
_downloads/e7286e38e0eda222368b49c43a03b4b6/: boutsimuldemo.py
_modules/: index.html  metadata.html  tdr.html  tdrphases.html  tdrsource.html  zoc.html
_modules/bouts/: bouts.html  boutsmle.html  boutsnls.html
_modules/imutools/: allan.html  ellipsoid.html  imu.html  imu2body.html  imucalibrate.html
_modules/skdiveMove/: calibconfig.html  calibrate_tdr.html  metadata.html  tdr.html  tdrphases.html  tdrsource.html  tests.html  zoc.html
_sources/: boutsdemo.rst.txt  boutsimuldemo.rst.txt  demo_allan.rst.txt  demo_ellipsoid.rst.txt  demo_imu2body.rst.txt  demo_simulbouts.rst.txt  demo_tdr.rst.txt  index.rst.txt  metadata.rst.txt  tdr.rst.txt  tdrdemo.rst.txt  tdrphases.rst.txt  tdrsource.rst.txt  zoc.rst.txt
_sources/demos/: demo_bouts.rst.txt  demo_imu2body.rst.txt  demo_tdr.md.txt  demo_tdr.rst.txt  index.rst.txt
_sources/modules/: bouts.rst.txt  tdr.rst.txt
_static/: bizstyle.js  classic.css  documentation_options.js
demos/: demo_allan.html  demo_bouts.html  demo_ellipsoid.html  demo_imu2body.html  demo_simulbouts.html  demo_tdr.html  imutools_demos.html  index.html
docs/source/: bouts.rst  boutsdemo.rst  boutsimuldemo.rst  conf.py  demo.rst  demo_allan.rst  demo_bouts.rst  demo_ellipsoid.rst  demo_imu2body.rst  demo_tdr.rst  imutools.rst  index.rst  metadata.rst  tdr.rst  tdrdemo.rst  zoc.rst
docs/source/.templates/: icon-credit.html  layout.html
docs/source/demos/: demo_allan.md  demo_allan.rst  demo_bouts.md  demo_bouts.rst  demo_ellipsoid.md  demo_ellipsoid.rst  demo_imu2body.md  demo_imu2body.rst  demo_simulbouts.md  demo_simulbouts.rst  imutools_demos.rst
modules/: bouts.html  imutools.html  index.html  metadata.html  tdr.html
skdiveMove/: __init__.py  __main__.py  calibconfig.py  calibrate_speed.py  calibrate_tdr.py  calibspeed.py  core.py  helpers.py  metadata.py  plotting.py  tdr.py  tdrphases.py  tdrsource.py  zoc.py
skdiveMove/bouts/: __init__.py  bouts.py  boutsmle.py  boutsnls.py
skdiveMove/config_examples/: ag_mk7_2002_022_config.json
skdiveMove/imutools/: __init__.py  allan.py  ellipsoid.py  imu.py  imu2body.py  imucalibrate.py  vector.py
skdiveMove/tests/: __init__.py  get_sample_data.py  test_BoutsMLE.py  test_BoutsNLS.py  test_TDR.py  test_TDRPhases.py  test_TDRSource.py  test_ZOC.py  test_calibrate.py  test_imu2body.py  test_imu_utils.py  test_imucalibrate.py  test_vector.py
(+16 files in other folders)
